# django-crum

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  manage.py  pytest.ini  requirements.in  requirements.txt  requirements35.txt  requirements36.txt  requirements37.txt  requirements38.txt  requirements39.txt  setup.cfg  setup.py  test_settings.py  test_suite.py  tox-requirements.ini  tox.ini
.github/workflows/: test.yml
crum/: __init__.py  signals.py
docs/: Makefile  conf.py  index.rst  make.bat
requirements/: dev.in  dev310.txt  dev311.txt  dev35.txt  dev36.txt  dev37.txt  dev38.txt  dev39.txt  tox.ini
test_app/: signals.py  tests.py  urls.py  views.py
test_project/: settings.py  urls.py
test_project/templates/admin/: base_site.html
test_project/test_app/: models.py  tests.py  urls.py  views.py
