[bumpversion]
commit = True
current_version = 0.8.0
tag = True
tag_name = {new_version}

[metadata]
name = django-crum
version = attr: crum.__version__
author = Nine More Minutes, Inc.
author_email = support@ninemoreminutes.com
description = Django middleware to capture current request and user.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django, request, user, middleware, thread, local
license = BSD
url = https://github.com/ninemoreminutes/django-crum/
project_urls =
	Documentation = https://django-crum.rtfd.org/
	Source = https://github.com/ninemoreminutes/django-crum/
	Tracker = https://github.com/ninemoreminutes/django-crum/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Internet :: WWW/HTTP
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = crum
include_package_data = True
setup_requires =
	pytest-runner
	setuptools-twine
tests_require =
	django>=2.2
	djangorestframework
	pytest
	pytest-cov
	pytest-django
	pytest-flake8
install_requires =
	django>=2.2

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = True
version = attr: crum.__version__
release = attr: crum.__version__

[upload_sphinx]
upload_dir = docs/_build/html

[upload_docs]
upload_dir = docs/_build/html

[bdist_wheel]
universal = 1

[aliases]
dev_build = clean test egg_info sdist bdist_wheel twine_check build_sphinx
release_build = clean test egg_info -b "" sdist bdist_wheel twine_check build_sphinx
test = pytest
ship_it = release_build twine_upload

[bumpversion:file:crum/__init__.py]

[bumpversion:file:docs/conf.py]

[pycodestyle]
ignore = E501
exclude = .git,.tox,build,dist,docs

[flake8]
ignore = E501
exclude = .git,.tox,build,dist,docs

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_project.settings
python_files = test*.py
testpaths = crum test_project
norecursedirs = .git .tox build dist docs
flake8-ignore = E501
addopts = --reuse-db --nomigrations --cache-clear --cov crum --cov-append --cov-report term-missing
